Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-3479

Tab Key does not work for "SysIPAddress32" controls

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Win32SS
    • None

    Description

      SysIPAddress32 controls (as used inside ncpa.cpl) can't be accessed through Alt+Tab.
      While you can see that they are included inside the Tab Order, you can't type anything after trying Alt+Tab to access a control.

      This bug exists for years, so it never seemed to work properly.
      Tested with r36709.

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              Colin Finck Colin Finck
              Votes:
              1 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: